syntax = "proto3";
package pb;

message CtsCreateRoom{
    int64 userId=1;
}

message StcCreateRoom{
    int64 userId=1;
    int64 roomId=3;
}
